<resources>
    <string name="app_name">ویروس یاب</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signUp">ثبت نام</string>
    <string name="logIn">ورود</string>
    <string name="virusAlert">ویروس یاب</string>
    <string name="loading_text">در حال لود شدن تصویر</string>
    <string name="pleaseEnterYourPassword">لطفا رمز خود را وارد کنید</string>
    <string name="pleaseEnterYourEmail">لطفا ایمیل خود را وارد کنید</string>
    <string name="doYouHaveVirus">آیا در حال حاضر بیماری دارید؟</string>
    <string name="virusesStatistics">آمار افراد مبتلا</string>
    <string name="aroundViruses">ویروس های اطراف</string>
    <string name="myAccount">حساب کاربری</string>
    <string name="show_password">نمایش رمز</string>
    <string name="apply_changes">اعمال تغییرات</string>
    <string name="no_virus">فاقد بیماری</string>
    <string name="corona">کرونا</string>
    <string name="measles">سرخک</string>
    <string name="flu">آنفولانزا</string>
    <string name="other_virus">دیگر ویروس ها</string>
    <string name="delete_user_account">حذف حساب کاربری</string>
    <string name="statisticsViruses">آمار ویروس ها</string>
</resources>