<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".IntroFragment"
    tools:viewBindingIgnore="true">

    <Button
        android:id="@+id/introActivity_btn_SignUp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/signUp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/introActivity_btn_LogIn"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_color"
        android:text="@string/logIn"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/introActivity_btn_SignUp"
        app:layout_constraintEnd_toEndOf="@+id/introActivity_btn_SignUp"
        app:layout_constraintStart_toStartOf="@+id/introActivity_btn_SignUp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="140dp"
        android:text="@string/virusAlert"
        android:textColor="#0096ff"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:background="@drawable/corona_img"
        android:src="@drawable/corona_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>