<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0096ff"
    tools:context=".StatisticsVirus">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/mainBottomNavigationMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="12dp"
                android:paddingEnd="16dp"
                android:text="@string/corona"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/statisticsVirusTxtCountCorona"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="10dp"
                android:paddingEnd="22dp"
                android:paddingBottom="12dp"
                android:text="@string/count"
                android:textSize="25sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="#0096ff" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="10dp"
                android:paddingEnd="16dp"
                android:text="@string/measles"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/statisticsVirusTxtCountMeasles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="10dp"
                android:paddingEnd="22dp"
                android:paddingBottom="12dp"
                android:text="@string/count"
                android:textSize="25sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="#0096ff" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="10dp"
                android:paddingEnd="16dp"
                android:text="@string/flu"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/statisticsVirusTxtCountFlu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="10dp"
                android:paddingEnd="22dp"
                android:paddingBottom="12dp"
                android:text="@string/count"
                android:textSize="25sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="#0096ff" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="10dp"
                android:paddingEnd="16dp"
                android:text="@string/other_virus"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/statisticsVirusTxtCountOtherViruses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="10dp"
                android:paddingEnd="22dp"
                android:paddingBottom="12dp"
                android:text="@string/count"
                android:textSize="25sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/mainBottomNavigationMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/main_menu" />


</androidx.constraintlayout.widget.ConstraintLayout>